--- a/vista/css/template.css
+++ b/vista/css/template.css
@@ -23,7 +23,15 @@ h2{
 	background-color: #003265;
 }
 
-.contenedorLogo, .contenedorTitulo, .contenedorSesion{
+.contenedorLogo{
+	width: 60%;
+	height: 5rem;
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.contenedorTitulo, .contenedorSesion{
 	width: 60%;
 	height: 5rem;
 	float: left;
@@ -187,12 +195,14 @@ footer {
   position: absolute;
   color: #003265;
   font-size: 17px;
-  padding-left: 4rem;
+  margin-left: -4rem;
   margin-top: 8px;
   font-family: "Roboto-Bold";
 }
 
-#lblrol{
-	text-align: right;
-	padding-right: 22rem;
+#lblTitulo{
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+	/*padding-right: 22rem;*/
 }
