Cambio de fondo de pagina

--- a/vista/css/index.css
+++ b/vista/css/index.css
@@ -6,7 +6,7 @@
 /* Seccion Cabecera */	
 
 body {
-	background-image: url(../images/patrones.png);
+	background-image: url(../images/Fw.png);
 	background-size: cover;
 	width: 100%
 	height: 100%;
